--- a/backend/crud-jwt/src/main/resources/application.properties
+++ b/backend/crud-jwt/src/main/resources/application.properties
@@ -1,1 +1,33 @@
 spring.application.name=crud-jwt
+
+# URL del servidor y base de datos (PostgreSQL)
+spring.datasource.url=jdbc:postgresql://localhost:5432/securityModule
+
+# Servidor SMTP de Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=carlosjavi1887@gmail.com
+spring.mail.password=
+
+# Propiedades SMTP
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# Usuario y contraseña de la base de datos
+spring.datasource.username=postgres
+spring.datasource.password=123456
+
+# Driver de PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuración de Hibernate (Manejo de esquema)
+spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar consultas SQL en consola
+spring.jpa.show-sql=true
+
+# Puerto del servidor
+server.port=8085
